# docs/swagger.json
@@ -451,6 +451,11 @@
         },
         "/v1/client/users": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "GetClientUsers account",
                 "produces": [
                     "application/json"
@@ -462,6 +467,11 @@
                 "responses": {}
             },
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "ClientAddUser account",
                 "produces": [
                     "application/json"
@@ -486,6 +496,11 @@
         },
         "/v1/clients": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "GetAllClients User account",
                 "produces": [
                     "application/json"
@@ -514,6 +529,11 @@
                 "responses": {}
             },
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "UserLogin User account",
                 "produces": [
                     "application/json"
@@ -538,6 +558,11 @@
         },
         "/v1/clients/{id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "GetClientById User account",
                 "produces": [
                     "application/json"
@@ -595,18 +620,17 @@
                     "User"
                 ],
                 "summary": "get all users",
-                "parameters": [
-                    {
-                        "description": "User create details",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.CreateUserData"
-                        }
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
-                ],
-                "responses": {}
+                }
             },
             "put": {
                 "security": [
@@ -675,7 +699,26 @@
                     "User"
                 ],
                 "summary": "get user by ID",
-                "responses": {}
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
             }
         }
     },
